# py-img

./: README.md  pyproject.toml
src/py_img/: _common.py  genico.py  gensci.py  mfc.py  splitgif.py  sqrpng.py  utils.py
