[project]
name = "py-img"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = ["pillow>=11.0.0", "pywin32>=308"]

[project.scripts]
mfc = "py_img.mfc:main"
genico = "py_img.genico:main"
gensci = "py_img.gensci:main"
sqrpng = "py_img.sqrpng:main"
splitgif = "py_img.splitgif:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["F403", "F401", "I"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
